*SVN*

* Fix various documentation typos throughout ActionPack. [Henrik N]

* Enhance documentation and add examples for url_for. [jeremymcanally]

* Fix documentation typo in routes. [norbert, pam]

* Sweep flash when filter chain is halted. [Caio Chassot <lists@v2studio.com>]

* Fixed that content_tag with a block will just return the result instead of concate it if not used in a ERb view #7857, #7432 [michael.niessner]

* Replace the current block/continuation filter chain handling by an implementation based on a simple loop.  #8226 [Stefan Kaes]

* Update UrlWriter to accept :anchor parameter. Closes #6771. [octopod]

* Added RecordTagHelper for using RecordIdentifier conventions on divs and other container elements [DHH]. Example:

    <% div_for(post) do %>     <div id="post_45" class="post">
      <%= post.body %>           What a wonderful world!
    <% end %>                  </div>

* Added page[record] accessor to JavaScriptGenerator that relies on RecordIdentifier to find the right dom id [DHH]. Example:

    format.js do
      # Calls: new Effect.fade('post_45');
      render(:update) { |page| page[post].visual_effect(:fade) }
    end

* Added RecordIdentifier to enforce view conventions on records for dom ids, classes, and partial paths [DHH]

* Added map.namespace to deal with the common situation of admin sections and the like [DHH]

    Before:
    
      map.resources :products, :path_prefix => "admin", :controller => "admin/products", :collection => { :inventory => :get }, :member => { :duplicate => :post }
      map.resources :tags, :name_prefix => 'admin_product_', :path_prefix => "admin/products/:product_id", :controller => "admin/product_tags"
      map.resources :images, :name_prefix => 'admin_product_', :path_prefix => "admin/products/:product_id", :controller => "admin/product_images"
      map.resources :variants, :name_prefix => 'admin_product_', :path_prefix => "admin/products/:product_id", :controller => "admin/product_variants"
