@@ -1,5 +1,7 @@
 *SVN*
 
+* Add brief introduction to REST to the resources documentation. [fearoffish]
+
 * Fix various documentation typos throughout ActionPack. [Henrik N]
 
 * Enhance documentation and add examples for url_for. [jeremymcanally]
